--- a/oh so sweet/public/product.html
+++ b/oh so sweet/public/product.html
@@ -20,10 +20,10 @@
             </div>
         </div>
         <div class="details">
-            <h2 class="product-brand">calvin klein</h2>
-            <p class="product-short-des">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <span class="product-price">$99</span>
-            <span class="product-actual-price">$200</span>
+            <h2 class="product-brand">cupcake</h2>
+            <p class="product-short-des">Small description of the product.</p>
+            <span class="product-price">$4</span>
+            <span class="product-actual-price">$8</span>
             <span class="product-discount">( 50% off )</span>
     
             <p class="product-sub-heading">select size</p>
@@ -46,7 +46,7 @@
     </section>
     <section class="detail-des">
         <h2 class="heading">description</h2>
-        <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ......</p>
+        <p class="des">Long description of the product</p>
     </section>
         <!-- cards-container-->
         <section class="product">
@@ -62,9 +62,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -75,9 +75,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -88,9 +88,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -101,9 +101,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -114,9 +114,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
             </div>           
@@ -136,9 +136,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -149,9 +149,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -162,9 +162,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -175,9 +175,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -188,9 +188,9 @@
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span>
-                        <span class="actual-price">$40</span>
+                        <p class="product-short-des">a short line about the cake..</p>
+                        <span class="price">$4</span>
+                        <span class="actual-price">$8</span>
                     </div>
                 </div>
             </div>           
