--- a/oh so sweet/public/index.html
+++ b/oh so sweet/public/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -43,9 +43,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -56,9 +56,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -69,9 +69,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -82,9 +82,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
         </div>           
@@ -117,9 +117,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -130,9 +130,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -143,9 +143,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -156,9 +156,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -169,9 +169,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
         </div>           
@@ -189,9 +189,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -202,9 +202,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -215,9 +215,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -228,9 +228,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
             <div class="product-card">
@@ -241,9 +241,9 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span>
-                    <span class="actual-price">$40</span>
+                    <p class="product-short-des">a short line about the cake..</p>
+                    <span class="price">$4</span>
+                    <span class="actual-price">$8</span>
                 </div>
             </div>
         </div>           
@@ -271,8 +271,8 @@
             </div>
         </div>
         <p class="footer-title">about company</p>
-        <p class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat tempore ad suscipit, eos eius quisquam sed optio nisi quaerat fugiat ratione et vero maxime praesentium, architecto minima reiciendis iste quo deserunt assumenda alias ducimus. Ullam odit maxime id voluptates rerum tenetur corporis laboriosam! Cum error ipsum laborum tempore in rerum necessitatibus nostrum nobis modi! Debitis adipisci illum nemo aperiam sed, et accusamus ut officiis. Laborum illo exercitationem quo culpa reprehenderit excepturi distinctio tempore cupiditate praesentium nisi ut iusto, assumenda perferendis facilis voluptas autem fuga sunt ab debitis voluptatum harum eum. Asperiores, natus! Est deserunt incidunt quasi placeat omnis, itaque harum?</p>
-        <p class="info">support emails - help@clothing.com, customersupport@clothing.com</p>
+        <p class="info">Here we describe our bakery </p>
+        <p class="info">support emails - help@ohsowseet.com, customersupport@ohsosweet.com</p>
         <p class="info">telephone - 180 00 00 001, 180 00 00 002</p>
         <div class="footer-social-container">
             <div>
@@ -285,7 +285,7 @@
                 <a href="#" class="social-link">twitter</a>
             </div>
         </div>
-        <p class="footer-credit">Clothing, Best apparels online store</p>
+        <p class="footer-credit">Oh So Sweet, Best cupcake online store</p>
     </footer>
 <script src="js/nav.js"></script>
 <script src="js/home.js"></script>
